# Voyager-Across-The-Unknown-Save-Game-Manager

./: .gitignore  README.md  VoyagerSaveManager.spec  build_linux.sh  build_tools.py  build_windows.bat  pyproject.toml  save_manager.py
.github/workflows/: release.yml
voyager_save_manager/: __init__.py  __main__.py
